[package]
name = "dodge_the_creeps_ecs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]  # Compile this crate to a dynamic C library.

[dependencies]
bevy_ecs = "0.13.0"
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
